# fourside-stacker

./: .hgignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  todo.org
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  components.jsx  constants.jsx  game.jsx  main.jsx  styles.css
frontend/src/components/: board.jsx  components.jsx  game.jsx
frontend/src/components/Modal/: Modal.css.js  index.jsx
react/: package.json
react/src/: App.jsx  styles.css
src/: db.rs  game.rs  handler.rs  main.rs  ws.rs
src/db/: mod.rs
src/db/entities/: game.rs  mod.rs  player.rs  prelude.rs
src/db/migrator/: m20220101_000001_create_player_table.rs  m20220101_000002_create_game_table.rs  mod.rs
