[package]
name = "rustwebgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
env_logger = "0.10.0"
tokio = { version = "1.28", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.14"
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "^0.11.3", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
sea-orm-migration = "^0.11.3"
futures = { version = "0.3", features = ["executor"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
